fix: adv filter options on mobile

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -482,6 +482,7 @@ input[type='time']::-webkit-calendar-picker-indicator {
   .container {
     display: grid;
     grid-template-columns: 100%;
+    grid-template-rows: 100%;
   }
 }
 
